# discord-vcpkg-example

./: CMakeLists.txt  ReadMe.md  vcpkg.json
.github/workflows/: test.yaml
src/: main.cpp
vcpkg/: BootstrapVcpkg.cmake
